#122 prevent time series table click from collapsing sidebar; make sparkline height slightly smaller; prevent mouse zoom on sparkline by using fixed range; allow mouse zoom on main time series plot

--- a/src/app-common/time-series/time-series.scss
+++ b/src/app-common/time-series/time-series.scss
@@ -5,6 +5,10 @@
     >tr:hover {
       background-color: rgba(0, 0, 255, 0.1);
     }
+
+    td {
+      vertical-align: middle;
+    }
   }
 }
 
